# cpp-sdl3-game

./: README.md
NewGame/: demo.tiled-session  demotiles.tsx
NewGame/sdl3demo/: CMakeLists.txt  CMakeUserPresets.json
NewGame/sdl3demo/demo/: Animation.h  CMakeLists.txt  gameobject.h  sdl3demo.cpp  timer.h
